--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 logging.level.org.zalando.logbook: TRACE
+
+# ????????? ?????????????? ????????????? ???? ??????
+spring.sql.init.mode=always
+
+# ????????? URL ??? H2
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+
+# ???????? ???????? H2
+spring.datasource.driverClassName=org.h2.Driver
+
+# ??? ???????????? ??? ??????????? ? ???? ?????? H2
+spring.datasource.username=sa
+
+# ?????? ??? ????????????
+spring.datasource.password=password
+
+# ????????? ??? H2 ??????? (???????? ?? ????? ???????)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
